# aiope-inf

./: .gitattributes  .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  host-toolchain.cmake
app/src/main/cpp/vulkan-shaders-prebuilt/: abs.comp.cpp  acc.comp.cpp  add.comp.cpp  add1.comp.cpp  add_id.comp.cpp  arange.comp.cpp  argmax.comp.cpp  argsort.comp.cpp  argsort_large.comp.cpp  ceil.comp.cpp  clamp.comp.cpp  concat.comp.cpp  contig_copy.comp.cpp  conv2d_dw.comp.cpp  conv2d_mm.comp.cpp  conv_transpose_1d.comp.cpp  copy.comp.cpp  copy_from_quant.comp.cpp  copy_to_quant.comp.cpp  copy_transpose.comp.cpp  cos.comp.cpp  count_equal.comp.cpp  count_experts.comp.cpp  cumsum.comp.cpp  cumsum_multipass1.comp.cpp  cumsum_multipass2.comp.cpp  dequant_f32.comp.cpp  dequant_iq1_m.comp.cpp  dequant_iq1_s.comp.cpp  dequant_iq2_s.comp.cpp  dequant_iq2_xs.comp.cpp  dequant_iq2_xxs.comp.cpp  dequant_iq3_s.comp.cpp  dequant_iq3_xxs.comp.cpp  dequant_iq4_nl.comp.cpp  dequant_iq4_xs.comp.cpp  dequant_mxfp4.comp.cpp  dequant_nvfp4.comp.cpp  dequant_q1_0.comp.cpp  dequant_q2_k.comp.cpp  (+110 more)
app/src/main/java/com/aiope/inf/: BootReceiver.kt  InferenceService.kt  LiteRTEngine.kt  LlamaJNI.kt  MainActivity.kt  ModelManager.kt  OpenAIServer.kt
app/src/main/java/com/example/llama/: LlamaJNI.kt  MainActivity.kt
app/src/main/jni/: gpu_backend.cpp  llama_jni.cpp  multimodal.cpp  quantize.cpp  streaming.cpp
app/src/main/res/drawable/: circle_green.xml  ic_folder_open.xml  ic_model.xml  ic_tune.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
models/lora-adapter/: README.md  adapter_config.json  tokenizer_config.json
scripts/: build-arm64.sh  setup.sh
